--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
 
     <!-- diseño -->
     <dimen name="elevacion_actionbar">4dp</dimen>
+    <dimen name="separacion_horizontal">1dp</dimen>
 </resources>
