--- a/app/src/main/res/layout/activity_movimiento.xml
+++ b/app/src/main/res/layout/activity_movimiento.xml
@@ -19,16 +19,88 @@
         android:paddingBottom="@dimen/separacion_horizontal"/>
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="200dp"
+        android:orientation="vertical"
         android:layout_height="match_parent"
+        android:layout_width="match_parent"
         android:layout_below="@+id/tvRegistrate"
         android:layout_alignParentStart="true">
-        <DatePicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+            <EditText
+                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:id="@+id/in_date_desde"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:hint="Del"
+                android:inputType="date|none"
+                android:textAlignment="center" />
+            <EditText
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/in_date_hasta"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:hint="Al"
+                android:inputType="date|none"
+                android:textAlignment="center" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tipo de movimiento:"
+                android:textSize="20dp"/>
 
-        </DatePicker>
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/spinner"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Buscar"
+            android:layout_marginBottom="10dp"/>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tipo"
+                    android:textSize="20dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Fecha"
+                    android:textSize="20dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Monto"
+                    android:textSize="20dp"/>
+            </TableRow>
+        </TableLayout>
+
     </LinearLayout>
 
 
